--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.kubernetes</groupId>
+			<artifactId>client-java</artifactId>
+			<version>20.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
