--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>client-java</artifactId>
 			<version>20.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka-clients</artifactId>
+			<version>3.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
